--- a/app/src/main/res/layout/activity_wait.xml
+++ b/app/src/main/res/layout/activity_wait.xml
@@ -16,7 +16,7 @@
         />
     <android.support.v7.widget.CardView
         app:layout_widthPercent="100%"
-        app:layout_heightPercent="52%"
+        app:layout_heightPercent="56%"
         app:cardCornerRadius="8dp"
         app:cardBackgroundColor="@color/cardColor"
         android:layout_alignParentBottom="true"
@@ -27,6 +27,11 @@
             android:id="@+id/wait_tab">
 
         </android.support.design.widget.TabLayout>
-
     </android.support.v7.widget.CardView>
+    <android.support.v4.view.ViewPager
+        app:layout_widthPercent="100%"
+        app:layout_heightPercent="56%"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/wait_pager"
+        />
 </android.support.percent.PercentRelativeLayout>
