--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -119,6 +119,7 @@
         card_view:cardBackgroundColor="@color/colorPrimary"
         android:layout_below="@id/team_score_list"
         card_view:cardCornerRadius="8dp"
+        android:id="@+id/team_score_desc"
         >
         <TextView
             android:layout_gravity="center_vertical"
@@ -129,4 +130,14 @@
             />
 
     </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        app:layout_heightPercent="60%"
+        android:layout_alignParentBottom="true"
+        app:cardCornerRadius="14dp"
+        app:cardBackgroundColor="@color/cardColor"
+        android:elevation="15dp"
+        android:visibility="gone"
+        android:id="@+id/team_score_desc_card"
+        />
 </android.support.percent.PercentRelativeLayout>
