--- a/app/src/main/res/layout/activity_wait.xml
+++ b/app/src/main/res/layout/activity_wait.xml
@@ -21,17 +21,23 @@
         app:cardBackgroundColor="@color/cardColor"
         android:layout_alignParentBottom="true"
         >
-        <android.support.design.widget.TabLayout
+        <android.support.percent.PercentRelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/wait_tab">
+            android:layout_height="match_parent">
+            <android.support.v4.view.ViewPager
+                app:layout_widthPercent="100%"
+                app:layout_heightPercent="86%"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/wait_pager"
+                />
+            <android.support.design.widget.TabLayout
+                app:layout_widthPercent="100%"
+                app:layout_heightPercent="13%"
+                app:tabMode="fixed"
+                android:id="@+id/wait_tab"/>
 
-        </android.support.design.widget.TabLayout>
+        </android.support.percent.PercentRelativeLayout>
+
     </android.support.v7.widget.CardView>
-    <android.support.v4.view.ViewPager
-        app:layout_widthPercent="100%"
-        app:layout_heightPercent="56%"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/wait_pager"
-        />
+
 </android.support.percent.PercentRelativeLayout>
