--- a/app/src/main/res/layout/fragment_wait_tab_game.xml
+++ b/app/src/main/res/layout/fragment_wait_tab_game.xml
@@ -26,19 +26,44 @@
         android:textSize="@dimen/text_body"
         android:text="@string/frag_wait_game_time_ex"
         />
-
     <TextView
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/frag_wait_game_req_num"
+        android:text="@string/frag_wait_game_req_num"
+        android:layout_below="@id/frag_wait_game_name"
+        />
+    <TextView
+        android:layout_toRightOf="@id/frag_wait_game_req_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/frag_wait_game_req_num_value"
+        android:layout_below="@id/frag_wait_game_name"
+        android:text="@string/frag_wait_game_req_num_ex"
+        />
+    <TextView
+        android:layout_alignParentRight="true"
+        android:id="@+id/frag_wait_game_req_pos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/frag_wait_game_name"
         android:text="@string/frag_wait_game_req_pos_ex"
         />
     <android.support.v7.widget.CardView
-        app:layout_widthPercent="80%"
+        app:cardBackgroundColor="@color/colorPrimary"
+        android:layout_below="@id/frag_wait_game_req_num"
+        app:layout_widthPercent="90%"
         app:layout_heightPercent="15%"
         android:layout_centerHorizontal="true"
         app:cardCornerRadius="8dp"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/frag_wait_game_loc_ex"
+            android:id="@+id/frag_wait_game_loc"
+            android:layout_gravity="center"
+            />
 
-        ></android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
 </android.support.percent.PercentRelativeLayout>
