--- a/app/src/main/res/layout/player_card.xml
+++ b/app/src/main/res/layout/player_card.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="180dp"
+    >
     <android.support.v7.widget.CardView
         android:id="@+id/team_root_card"
         xmlns:carc_view="http://schemas.android.com/apk/res-auto"
-        carc_view:cardBackgroundColor="@color/cardColor"
+        carc_view:cardBackgroundColor="@color/colorPrimary"
         carc_view:cardCornerRadius="8dp"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_widthPercent="100%"
-        app:layout_heightPercent="100%">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="10dp"
+        >
         <android.support.percent.PercentRelativeLayout
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/card_inset">
+            android:paddingLeft="@dimen/card_horizontal_margin"
+            >
             <android.support.v7.widget.CardView
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/player_image_card"
@@ -31,7 +34,7 @@
             </android.support.v7.widget.CardView>
             <TextView
                 app:layout_marginTopPercent="20%"
-                app:layout_widthPercent="30%"
+                android:layout_width="wrap_content"
                 app:layout_heightPercent="20%"
                 app:layout_marginLeftPercent="8%"
                 android:layout_toRightOf="@id/player_image_card"
@@ -41,7 +44,7 @@
 
                 />
             <TextView
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                app:layout_marginLeftPercent="2%"
                 app:layout_marginTopPercent="22%"
                 app:layout_widthPercent="30%"
                 app:layout_heightPercent="20%"
@@ -61,7 +64,7 @@
                 />
             <TextView
                 app:layout_widthPercent="43%"
-                app:layout_heightPercent="7%"
+                app:layout_heightPercent="17%"
                 android:layout_below="@id/player_name"
                 android:layout_toRightOf="@id/player_position"
                 android:id="@+id/player_position_value"
