--- a/app/src/main/res/layout/fragment_wait_tab_game.xml
+++ b/app/src/main/res/layout/fragment_wait_tab_game.xml
@@ -2,8 +2,12 @@
 <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/card_horizontal_margin"
+    android:paddingRight="@dimen/card_horizontal_margin"
+    >
     <TextView
+        app:layout_marginTopPercent="10%"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/text_body"
@@ -14,11 +18,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/frag_wait_game_type"
+        android:layout_below="@id/frag_wait_game_name"
         android:text="@string/frag_wait_game_type_ex"
-        android:layout_toRightOf="@id/frag_wait_game_name"
-        app:layout_marginTopPercent="1.2%"
         />
     <TextView
+        app:layout_marginTopPercent="10%"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/frag_wait_game_time"
@@ -27,29 +31,33 @@
         android:text="@string/frag_wait_game_time_ex"
         />
     <TextView
+        app:layout_marginTopPercent="5%"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/frag_wait_game_req_num"
         android:text="@string/frag_wait_game_req_num"
-        android:layout_below="@id/frag_wait_game_name"
+        android:layout_below="@id/frag_wait_game_type"
         />
     <TextView
+        app:layout_marginTopPercent="5%"
         android:layout_toRightOf="@id/frag_wait_game_req_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/frag_wait_game_req_num_value"
-        android:layout_below="@id/frag_wait_game_name"
+        android:layout_below="@id/frag_wait_game_type"
         android:text="@string/frag_wait_game_req_num_ex"
         />
     <TextView
+        app:layout_marginTopPercent="5%"
         android:layout_alignParentRight="true"
         android:id="@+id/frag_wait_game_req_pos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/frag_wait_game_name"
+        android:layout_below="@id/frag_wait_game_type"
         android:text="@string/frag_wait_game_req_pos_ex"
         />
     <android.support.v7.widget.CardView
+        app:layout_marginTopPercent="24%"
         app:cardBackgroundColor="@color/colorPrimary"
         android:layout_below="@id/frag_wait_game_req_num"
         app:layout_widthPercent="90%"
