--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -113,9 +113,10 @@
             />
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.RecyclerView
-        app:layout_marginTopPercent="3%"
+        app:layout_marginTopPercent="2%"
         app:layout_widthPercent="100%"
-        app:layout_heightPercent="48%"
+        app:layout_heightPercent="35%"
+        android:id="@+id/player_score_list"
         android:layout_below="@id/player_team_card"
         />
 </android.support.percent.PercentRelativeLayout>
