--- a/app/src/main/res/layout/frag_team_score_item.xml
+++ b/app/src/main/res/layout/frag_team_score_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="180dp"
     android:layout_height="match_parent">
 
-    <android.support.percent.PercentRelativeLayout
+   <!-- <android.support.percent.PercentRelativeLayout
         app:layout_widthPercent="100%"
         app:layout_heightPercent="70%"
         android:id="@+id/item_team_score_graph"
@@ -25,6 +25,7 @@
             app:layout_heightPercent="100%"
             android:background="@color/light_blue_500"
             android:id="@+id/item_team_score_win_graph"
+            android:layout_alignParentBottom="true"
         />
         <FrameLayout
             app:layout_marginLeftPercent="63%"
@@ -32,6 +33,7 @@
             app:layout_heightPercent="100%"
             android:background="@color/red_400"
             android:id="@+id/item_team_score_lose_graph"
+            android:layout_alignParentBottom="true"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -41,7 +43,11 @@
             android:layout_centerVertical="true"
             app:layout_marginLeftPercent="9%"
             />
-    </android.support.percent.PercentRelativeLayout>
+    </android.support.percent.PercentRelativeLayout>-->
+    <FrameLayout
+        app:layout_widthPercent="100%"
+        app:layout_heightPercent="70%"
+        android:id="@+id/item_team_score_graph"/>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="10dp"
