--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_header">30sp</dimen>
     <dimen name="text_body">20sp</dimen>
+    <dimen name="item_margin">5dp</dimen>
 </resources>
